@@ -89,6 +89,7 @@ the development of OpenBSM:
     Ruslan Ermilov
     Martin Voros
     Diego Giagio
+    Alex Samorukov
 
 In addition, Coverity, Inc.'s Prevent(tm) static analysis tool and Gimpel
 Software's FlexeLint tool were used to identify a number of bugs in the
@@ -110,4 +111,4 @@ Information on TrustedBSD may be found on the TrustedBSD home page:
 
     http://www.TrustedBSD.org/
 
-$P4: //depot/projects/trustedbsd/openbsm/README#23 $
+$P4: //depot/projects/trustedbsd/openbsm/README#24 $
