@@ -23,7 +23,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/libbsm/au_event.3#7 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/libbsm/au_event.3#8 $
 .\"
 .Dd April 19, 2005
 .Dt AU_EVENT 3
@@ -131,7 +131,7 @@ Functions
 .Fn getauevnum ,
 .Fn getauevnum_r ,
 and
-.Fn getauevnuam
+.Fn getauevnonam
 will return a reference to a
 .Vt "struct au_event_ent"
 or
